--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vinyl": "^2.1.0"
   },
   "dependencies": {
-    "ng-dependencies": "^0.8.1",
+    "ng-dependencies": "https://github.com/siir/ng-dependencies.git",
     "plugin-error": "^1.0.1",
     "through2": "^2.0.0",
     "toposort": "^1.0.0"
